--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,9 @@ build-backend = "uv_build"
 dev = [
     "jupyter>=1.1.1",
     "matplotlib>=3.10.6",
+    "nbstripout>=0.8.1",
+    "pre-commit>=4.3.0",
+    "ruff>=0.13.2",
     "scikit-learn>=1.7.2",
     "seaborn>=0.13.2",
 ]
