deps: add datasets and python-dotenv

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 requires-python = ">=3.12, <3.13"
 dependencies = [
     "accelerate>=1.10.1",
+    "datasets>=4.1.1",
     "diffusers>=0.35.1",
     "gdown>=5.2.0",
     "huggingface-hub>=0.35.1",
@@ -17,6 +18,7 @@ dependencies = [
     "opencv-python>=4.11.0.86",
     "pillow>=11.3.0",
     "py-feat>=0.6.1",
+    "python-dotenv>=1.1.1",
     "scipy>=1.16.2",
     "torch>=2.8.0",
     "torchvision>=0.23.0",
