--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
   "diffusers>=0.35.1",
   "gdown>=5.2.0",
   "huggingface-hub>=0.35.1",
+  "kaggle>=1.7.4.5",
   "numpy<2",
   "opencv-python>=4.11.0.86",
   "pillow>=11.3.0",
