--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,15 +12,12 @@ dependencies = [
   "accelerate>=1.10.1",
   "datasets[vision]>=4.1.1",
   "diffusers>=0.35.1",
-  "gdown>=5.2.0",
   "huggingface-hub>=0.35.1",
-  "kaggle>=1.7.4.5",
   "numpy<2",
   "opencv-python>=4.11.0.86",
   "pillow>=11.3.0",
   "py-feat",
   "python-dotenv>=1.1.1",
-  "rich>=14.1.0",
   "safetensors>=0.6.2",
   "scipy>=1.11.0,<1.12.0",
   "termcolor>=3.1.0",
@@ -36,6 +33,8 @@ build-backend = "uv_build"
 
 [dependency-groups]
 dev = [
+  "kaggle>=1.7.4.5",
+  "fabric>=3.2.2",
   "jupyter>=1.1.1",
   "matplotlib>=3.10.6",
   "nbstripout>=0.8.1",
@@ -84,11 +83,10 @@ ignore = [
 
 [tool.ruff.lint.extend-per-file-ignores]
 "__init__.py" = [
+    # Unused imports
     "F401",
 ]
-"src/scripts/main.py" = [
-    "I",
-]
+
 # dont worry about docstrings in scripts
 "src/scripts/*" = ["D"]
 
