--- a/.gitignore
+++ b/.gitignore
@@ -186,4 +186,7 @@ data/*
 
 results/final_results/**/*.png
 
+results/anycost/*numexamples*.safetensors
+results/anycost/convergence_*.safetensors
+
 .DS_Store
